--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
     "terser": "^5.43.1",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
